# python-project-52

./: .coverage  .gitignore  Makefile  README.md  build.sh  coverage.xml  db.sqlite3  pyproject.toml
.github/workflows/: coverage.yml
labels/: models.py  tests.py  urls.py  views.py
labels/fixtures/: label.json
labels/migrations/: 0001_initial.py
statuses/: models.py  tests.py  urls.py  views.py
statuses/fixtures/: status.json
statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/: settings.py  urls.py  views.py
task_manager/templates/: base.html  index.html
tasks/: filters.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_description.py  0003_alter_task_description_alter_task_doer.py  0004_alter_task_description.py  0005_alter_task_description_alter_task_doer.py  0006_alter_task_description_alter_task_doer.py  0007_task_label_alter_task_creator_alter_task_description_and_more.py  0008_remove_task_label_task_labels.py  0009_remove_task_doer_task_executor.py
templates/: base.html  index.html  users.html
templates/labels/: label_create.html  label_delete.html  label_list.html  label_update.html
templates/registration/: delete.html  login.html  signup.html  update.html
templates/statuses/: status_create.html  status_delete.html  status_list.html  status_update.html
templates/tasks/: task_create.html  task_delete.html  task_list.html  task_update.html  task_view.html
templates/users/: user_update.html
users/: forms.py  tests.py  urls.py  views.py
users/fixtures/: user1.json  (+1 more)
(+5 files in other folders)
