[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
whitenoise = {extras = ["brotli"], version = "^6.8.2"}
gunicorn = "^23.0.0"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
dj-database-url = "^2.3.0"
django-bootstrap5 = "^24.3"
django-filter = "^24.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
rollbar = "^1.0.0"
coverage = "^7.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
